zebra-state/src/service/finalized_state/disk_format/tests/snapshots/tip_chain_value_pool_zip234_raw_data@testnet_2.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "",
    v: "6cdc020000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
  ),
]
